# Mean-Screen

./: .coverage  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
api/: main.py
app/agents/: __init__.py  base.py  classification_agent.py  error_handler.py  orchestrator.py  reasoner.py  recommender.py  retriever.py
app/api/: __init__.py  policies.py  routes.py
app/hate_speech_detector.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
app/models/: history.py  policies.py  schemas.py
app/services/: embed_service.py  llm_services.py  policy_loader.py  policy_store.py  qdrant_client.py
app/utils/: exceptions.py
data/policy_docs/: google_prohibited_content.txt  indian_legal_framework.txt  meta_community_standards.txt  reddit_policy.txt  youtube_community_guidelines.txt
docker/: entrypoint.sh
scripts/: qdrant.py  test.py
tests/agents/: test_classification_agent.py  test_embedservice.py  test_errorhandler.py  test_orchestrator.py  test_reasoner.py  test_recommender.py  test_retriever.py
ui/: app.py  audio.py  client.py  components.py  config.py  export_csv.py
ui/pages/: audio.py  reddit.py
